Fix About grid vertical alignment

--- a/style.css
+++ b/style.css
@@ -1602,6 +1602,7 @@ main {
 
   .about-grid {
     grid-template-columns: 3fr 2fr;
+    align-items: center;
   }
 
   .skills-desktop-layout {
